sha256Accel/sha256Accel/logs/hls_run_csim_29924.backup.log
  **** HLS Build v2025.1 6135595
INFO: [HLS 200-2005] Using work_dir D:/Vitis/shaAccel/sha256Accel/sha256Accel 
INFO: [HLS 200-2176] Writing Vitis IDE component file D:/Vitis/shaAccel/sha256Accel/sha256Accel/vitis-comp.json
INFO: [HLS 200-10] Creating and opening component 'D:/Vitis/shaAccel/sha256Accel/sha256Accel'.
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2025.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-2174] Applying component config ini file D:/Vitis/shaAccel/sha256Accel/hls_config.cfg
WARNING: [HLS 200-2001] file not found './answers' see [hls] from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(20)
WARNING: [HLS 200-2001] file not found './datain' see [hls] from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(21)
INFO: [HLS 200-1465] Applying config ini 'syn.file=../dataTypes.h' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file 'D:/Vitis/shaAccel/dataTypes.h' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../functions256.cpp' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file 'D:/Vitis/shaAccel/functions256.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../functions256.h' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(10)
INFO: [HLS 200-10] Adding design file 'D:/Vitis/shaAccel/functions256.h' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../chunkProcessor/chunkProcessor.cpp' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(11)
INFO: [HLS 200-10] Adding design file 'D:/Vitis/shaAccel/chunkProcessor/chunkProcessor.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../chunkProcessor/chunkProcessor.h' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(12)
INFO: [HLS 200-10] Adding design file 'D:/Vitis/shaAccel/chunkProcessor/chunkProcessor.h' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../chunkIteration/chunkIter.cpp' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(13)
INFO: [HLS 200-10] Adding design file 'D:/Vitis/shaAccel/chunkIteration/chunkIter.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../chunkIteration/chunkIter.h' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(14)
INFO: [HLS 200-10] Adding design file 'D:/Vitis/shaAccel/chunkIteration/chunkIter.h' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../wGenerator/wGenerator.cpp' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(15)
INFO: [HLS 200-10] Adding design file 'D:/Vitis/shaAccel/wGenerator/wGenerator.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../wGenerator/wGenerator.h' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(16)
INFO: [HLS 200-10] Adding design file 'D:/Vitis/shaAccel/wGenerator/wGenerator.h' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=sha256Accel.h' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(17)
INFO: [HLS 200-10] Adding design file 'D:/Vitis/shaAccel/sha256Accel/sha256Accel.h' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=sha256Accel.cpp' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(18)
INFO: [HLS 200-10] Adding design file 'D:/Vitis/shaAccel/sha256Accel/sha256Accel.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=tb.cpp' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(19)
INFO: [HLS 200-10] Adding test bench file 'D:/Vitis/shaAccel/sha256Accel/tb.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=./answers' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(20)
WARNING: [HLS 200-40] Cannot find test bench file './answers'
INFO: [HLS 200-1465] Applying config ini 'tb.file=./datain' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(21)
WARNING: [HLS 200-40] Cannot find test bench file './datain'
INFO: [HLS 200-1465] Applying config ini 'tb.file=./answers.dat' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(22)
INFO: [HLS 200-10] Adding test bench file 'D:/Vitis/shaAccel/sha256Accel/answers.dat' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=./datain.dat' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(23)
INFO: [HLS 200-10] Adding test bench file 'D:/Vitis/shaAccel/sha256Accel/datain.dat' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.top=sha256Accel' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(7)
INFO: [HLS 200-1465] Applying config ini 'flow_target=vivado' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2025.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying config ini 'part=xa7s6cpga196-2I' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xa7s6-cpga196-2I'
INFO: [HLS 200-1465] Applying config ini 'package.output.format=ip_catalog' from D:/Vitis/shaAccel/sha256Accel/hls_config.cfg(5)
INFO: [HLS 200-2176] Writing Vitis IDE component file D:/Vitis/shaAccel/sha256Accel/sha256Accel/vitis-comp.json
WARNING: [HLS 200-1998] cannot find relative file path '../../answers' in directory(s): D:/Vitis/shaAccel/sha256Accel/sha256Accel/solution D:/Vitis/shaAccel/sha256Accel
WARNING: [HLS 200-1998] cannot find relative file path '../../datain' in directory(s): D:/Vitis/shaAccel/sha256Accel/sha256Accel/solution D:/Vitis/shaAccel/sha256Accel
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../sha256Accel.cpp in debug mode
csim.mk:94: recipe for target 'obj/sha256Accel.o' failed
In file included from ../../../../sha256Accel.cpp:3:
In file included from ../../../../sha256Accel.h:6:
In file included from ../../../../../chunkProcessor/chunkProcessor.h:4:
In file included from ../../../../../chunkProcessor/../wGenerator/wGenerator.h:4:
In file included from ../../../../../chunkProcessor/../wGenerator/../dataTypes.h:4:
In file included from C:/Xilinx/2025.1/Vitis/include/ap_int.h:10:
In file included from C:/Xilinx/2025.1/Vitis/include/etc/ap_common.h:677:
In file included from C:/Xilinx/2025.1/Vitis/include/etc/ap_private.h:68:
In file included from C:/Xilinx/2025.1/Vitis/include/hls_half.h:26:
In file included from C:/Xilinx/2025.1/Vitis/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/2025.1/Vitis/include/hls_fpo.h:140:
In file included from C:/Xilinx/2025.1/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/2025.1/Vitis/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/2025.1/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../sha256Accel.cpp:58:65: error: use of undeclared identifier 'interhash'; did you mean 'interHash'?
        std::cout << "final hash[" << j << "]: " << std::hex << interhash[j] << "\n";
                                                                ^~~~~~~~~
                                                                interHash
../../../../sha256Accel.cpp:8:13: note: 'interHash' declared here
    word256 interHash[8] = {0x6a09e667, 0xbb67ae85, 0x3c6ef372, 0xa54ff53a, 0x510e527f, 0x9b05688c, 0x1f83d9ab, 0x5be0cd19};
            ^
1 warning and 1 error generated.
make: *** [obj/sha256Accel.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 2 seconds. Total elapsed time: 4.719 seconds; peak allocated memory: 145.223 MB.
